--- a/src/stylus/components/_hlist.styl
+++ b/src/stylus/components/_hlist.styl
@@ -7,5 +7,7 @@
     float: left;
 
   &--spaced
+    padding: 8px
     > *
-      margin: 16px
+      padding: 8px
+      box-sizing: border-box
