--- a/src/stylus/components/_video.styl
+++ b/src/stylus/components/_video.styl
@@ -1,2 +1,3 @@
 .c-video
   max-width: 100%
+  display: block
