--- a/src/stylus/components/_vlist.styl
+++ b/src/stylus/components/_vlist.styl
@@ -3,5 +3,7 @@
     width: 100%
 
   &--spaced
+    padding-top: 8px
     > *
-      margin-bottom: 16px;
+      padding-bottom: 8px
+      box-sizing: border-box
